Update: Fixed vertical scroll oon mobile devices & added static blog posts

--- a/css/blog/blog.css
+++ b/css/blog/blog.css
@@ -87,7 +87,13 @@
     line-height: 24px;
 }
 
-
+.back {
+    border: none;
+    padding: 1rem;
+    background: var(--red-alt);
+    color: #eee;
+    font-weight: 500;
+}
 
 /* 
 *------------
